deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graph-py-example-app
  labels:
    app: graph-py-example-app
  annotations:
    repository: "https://github.com/vorendu-com/federated-python-example"
    owner: "@llasapg"
spec:
  selector:
    matchLabels:
      app: graph-py-example-app
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: graph-py-example-app
      annotations:
        repository: "https://github.com/vorendu-com/federated-python-example"
        owner: "@llasapg"
    spec:
      containers:
        - name: graph-py-example-app
          image: vorendu.azurecr.io/federated-python-example:80d0593f754accdf344dde62900baec8f5dea5da
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "40Mi"
              cpu: "10m"
            limits:
              memory: "150Mi"
              cpu: "150m"
          livenessProbe:
            failureThreshold: 1
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            tcpSocket:
              host: ""
              port: 80
          readinessProbe:
            failureThreshold: 1
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
            tcpSocket:
              host: ""
              port: 80
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 8
            tcpSocket:
              host: ""
              port: 80
