service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graph-py-example-service
  annotations:
    repository: "https://github.com/vorendu-com/federated-python-example"
    owner: "@llasapg"
spec:
  selector:
    app: graph-py-example-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
