ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graph-py-example-ingress
  annotations:
    repository: "https://github.com/vorendu-com/federated-graph-gateway"
    owner: "@llasapg"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: products.vorendu.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: graph-py-example-service
                port:
                  number: 80
