kube.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graph-py-example-app
  labels:
    app: graph-py-example-app
  annotations:
    repository: "https://github.com/vorendu-com/federated-python-example"
    owner: "@llasapg"
spec:
  selector:
    matchLabels:
      app: graph-py-example-app
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: graph-py-example-app
      annotations:
        repository: "https://github.com/vorendu-com/federated-python-example"
        owner: "@llasapg"
    spec:
      containers:
        - name: graph-py-example-app
          image: vorendureg.azurecr.io/federated-python-example:c42083935b42a0ee9a3c5e1aef7f986749a2dd38
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "40Mi"
              cpu: "10m"
            limits:
              memory: "150Mi"
              cpu: "150m"
          livenessProbe:
            failureThreshold: 1
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            tcpSocket:
              host: ""
              port: 80
          readinessProbe:
            failureThreshold: 1
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
            tcpSocket:
              host: ""
              port: 80
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 8
            tcpSocket:
              host: ""
              port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: graph-py-example-service
  annotations:
    repository: "https://github.com/vorendu-com/federated-python-example"
    owner: "@llasapg"
spec:
  selector:
    app: graph-py-example-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graph-py-example-ingress
  annotations:
    repository: "https://github.com/vorendu-com/federated-graph-gateway"
    owner: "@llasapg"
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: products.vorendu.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: graph-py-example-service
                port:
                  number: 80
